--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Star-Accesorios | Tu tienda online</title>
+    <meta name="description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección."> 
+    
+    
+  <meta property="og:title" content="Star-Accesorios | Tu tienda online" />
+  <meta property="og:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección." />
+  <meta property="og:image" content="C:\Users\Claudio\Desktop\ecommercejoyas\public\Star logo.png" />
+  <meta property="og:url" content="https://ecommerce-star-six.vercel.app/" />
+  <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
