--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
   <meta property="og:title" content="Star-Accesorios | Tu tienda online" />
   <meta property="og:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección." />
-  <meta property="og:image" content="C:\Users\Claudio\Desktop\ecommercejoyas\public\Star logo.png" />
+  <meta property="og:image" content="https://ecommerce-star-six.vercel.app/Star logo.png" />
   <meta property="og:url" content="https://ecommerce-star-six.vercel.app/" />
   <meta property="og:type" content="website" />
   </head>
