--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Star-Accesorios | Tu tienda online</title>
-    <meta name="description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección."> 
-    
-    
-  <meta property="og:title" content="Star-Accesorios | Tu tienda online" />
-  <meta property="og:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección." />
-  <meta property="og:image" content="https://ecommerce-star-six.vercel.app/Starlogo.png" />
-  <meta property="og:url" content="https://ecommerce-star-six.vercel.app/" />
-  <meta property="og:type" content="website" />
+    <!-- HTML Meta Tags -->
+<title>Star-Accesorios | Tu tienda online</title>
+<meta name="description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://ecommerce-star-six.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Star-Accesorios | Tu tienda online">
+<meta property="og:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección.">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/0ce540f7-8897-4a63-a8bd-b5daccab52ea.svg?token=H2tYgiUYeF6ooAlvhhZE8UMlwHIN1h09clN15H22e6M&height=85&width=123&expires=33295332359">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="ecommerce-star-six.vercel.app">
+<meta property="twitter:url" content="https://ecommerce-star-six.vercel.app/">
+<meta name="twitter:title" content="Star-Accesorios | Tu tienda online">
+<meta name="twitter:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección.">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/0ce540f7-8897-4a63-a8bd-b5daccab52ea.svg?token=H2tYgiUYeF6ooAlvhhZE8UMlwHIN1h09clN15H22e6M&height=85&width=123&expires=33295332359">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
