--- a/index.html
+++ b/index.html
@@ -2,28 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/Starlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Primary Meta Tags -->
-<title>Star-Accesorios | Tu tienda online</title>
-<meta name="title" content="Star-Accesorios | Tu tienda online" />
-<meta name="description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección." />
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://ecommerce-star-six.vercel.app/" />
-<meta property="og:title" content="Star-Accesorios | Tu tienda online" />
-<meta property="og:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección." />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
-
-<!-- X (Twitter) -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://ecommerce-star-six.vercel.app/" />
-<meta property="twitter:title" content="Star-Accesorios | Tu tienda online" />
-<meta property="twitter:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección." />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
-
-<!-- Meta Tags Generated with https://metatags.io -->
+    <title>Star-Accesorios | Tu tienda online</title>
+    <meta name="description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección."> 
+    
+    
+  <meta property="og:title" content="Star-Accesorios | Tu tienda online" />
+  <meta property="og:description" content="Accesorios únicos, de calidad y al mejor precio. Descubrí nuestra colección." />
+  <meta property="og:image"  />
+  <meta property="og:url" content="https://ecommerce-star-six.vercel.app/" />
+  <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
